<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Especies extends Model
{
    protected $fillable = [
        'nombre',
        'associated_habitat',
    ];

    public function animal()
    {
        return $this->belongsTo('App\Models\Animal');
    }

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }

    public function recintos()
    {
        return $this->hasOne(\App\Models\Recintos);
    }
}
