<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Recintos extends Model
{
    protected $fillable = [
        'nombre',
        'designed_species',
    ];

    public function animal()
    {
        return $this->belongsTo('App\Models\Animal');
    }

    public function especies()
    {
        return $this->belongsTo('App\Models\Especies');
    }

    public function animals()
    {
        return $this->belongsToMany('App\Models\Animal');
    }
}
